fixed the horizontal scroll again

--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 img {
-    width: 380px;
+    width: 100%;
     height: 80%;
     margin: 0;
 }
